--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -31,4 +31,11 @@ http_server(
     args = ["."],
 )
 
-
+mocha_test(
+    name = "unit_tests",
+    args = ["*.spec.js"],
+    data = glob(["*.spec.js"]) + [
+        "@npm//domino",
+        "app.es5.js"
+    ]
+)
